--- a/css/style.css
+++ b/css/style.css
@@ -62,4 +62,20 @@ h1 { font-size: var(--fs-h1) }
 h2 { font-size: var(--fs-h2) }
 h3 { font-size: var(--fs-h3) }
 
+.section__title {
+    margin-bottom: .25mm;
 
+}
+
+.section__subtitle{
+
+    margin: 0;
+    font-size: var(--fs--h3);
+
+}
+
+.section__subtitle--intro,
+.section__subtitle--about {
+    background: var(--clr-accent);
+    font-family: var(--ff-secondary);
+}
