--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,8 @@ img {
     max-width: 100%;
 }
 
+strong { font-weight: var(--fw-bold) }
+
 
 /* typography */
 
@@ -67,6 +69,15 @@ h3 { font-size: var(--fs-h3) }
 
 }
 
+.section__title--intro {
+    font-weight: var(--fw-reg);
+}
+
+.section__title--intro strong {
+    display: block;
+}
+
+
 .section__subtitle{
 
     margin: 0;
@@ -79,3 +90,4 @@ h3 { font-size: var(--fs-h3) }
     background: var(--clr-accent);
     font-family: var(--ff-secondary);
 }
+
